
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lima.r0bertson.uwlgymlog.AddExerciseToRoutine"
    android:orientation="vertical">

    <include layout="@layout/common_layout"
        android:id="@+id/include" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:rowCount="3"
        android:columnCount="2">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_exercise_name"
            android:id="@+id/textView_entryname"
         />

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/t_name"
            android:editable="true" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_load_unit"
            android:id="@+id/textView_entryloadunit"
            />

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/t_load_unit"
            android:editable="true" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_rep_unit"
            android:id="@+id/textView_entryrepunit"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/t_rep_unit"

            android:editable="true"
            android:layout_marginBottom="20dp"/>
    </GridLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_add"
        android:id="@+id/bt_add"
        android:layout_below="@+id/t_name"
        android:layout_centerHorizontal="true"
        android:onClick="addExerciseToRoutineClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_cancel"
        android:id="@+id/bt_cancel"
        android:layout_below="@+id/bt_add"
        android:layout_alignRight="@+id/bt_add"
        android:layout_alignEnd="@+id/bt_add"
        android:onClick="cancelClick" />
</LinearLayout>
</LinearLayout>
